Fix overflow problem for fixed side nav

--- a/src/stylesheets/menu.less
+++ b/src/stylesheets/menu.less
@@ -38,6 +38,9 @@
   .menubar.fixed {
     position: fixed;
     overflow-y: auto;
+    .menu.section {
+      width: 107%;
+    }
   }
   .menubar.fixed {
     -webkit-overflow-scrolling: touch;
